finished listingform/fixed minor alignment in signup

--- a/cs-97-react/src/components/Listings/ListingForm.css
+++ b/cs-97-react/src/components/Listings/ListingForm.css
@@ -1,85 +1,92 @@
 .listing-page{
 
-  display: flex;
-  text-align: center;
+  color: var(--nav-bar-color);
+  display:flex;
+  flex-direction:column;
+  text-align:center;
+  justify-content:center;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.form-header {
+  display:flex;
+  text-align:center;
+  justify-content:center;
+
+  margin: 0;
+  padding: 0 0 0px;
+  color: var(--nav-bar-color);
+  font-size: 20px;
+}
+
+.form-status{
+  height:50px;
+  display:flex;
+  text-align:center;
+  justify-content:center;
+  margin:5px;
+}
+
+.form-form{
+  width:100%;
+  display:flex;
+  flex-direction:column;
+  text-align:center;
   justify-content: center;
 }
 
-.listing-heading {
-  margin: 0;
-  padding: 0 0 15px;
-  color: black;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-
-.outer-listing input[type="text"], [type="number"]{
+.form-field> input{
+  box-sizing:border-box;
   border: none;
-  text-align: center;
-  margin-bottom: 20px;
-  margin-left: 10px;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid var(--nav-bar-color);
   background: transparent;
-  outline: none;
-  height: 20px;
-  width: 200px;
-  color: #333;
-  font-size: 15px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-
-.listings-info {
-  margin-top: 15px;
-  margin-right: 0px;
-  text-align: left;
-}
-
-
-.Quantity{
-  margin-left: -10px;
-  border: none;
-  background: transparent;
-
-}
-.Quantity [type="number"] {
-  margin-left: 20px;
-  padding:5px;
-  border: none;
-  background: transparent;
-
-}
-
-.Item {
-  margin-right: px;
-  text-align: center;
-}
-.listingBut button[type="submit"] {
-  border: none;
   outline: none;
   height: 40px;
-  width: 200px;
-  background: navy;
-  color: whitesmoke;
-  font-size: 14px;
-  border-radius: 20px;
-  font-family: "Optima";
+  width: 300px;
+  color:var(--nav-bar-color);
+  font-size: 20px;
+  margin:5px;
 }
 
-.listingBut button[type="submit"]:hover {
-  cursor: pointer;
-  background: #64aeeb;
-  /* background: #4c9ed3; */
-  color: whitesmoke;
+.form-field > input[type="number"]::-webkit-inner-spin-button, 
+.form-field > input[type="number"]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
 }
 
-.outer-listing a {
-  font-size: 14px;
-  text-decoration: underline;
-  color: whitesmoke;
-  line-height: 50px;
+.form-field > input:hover{
+  border-bottom: 3px solid var(--nav-bar-color);
 }
 
-.outer-listing a:hover {
-  color: #f5f5f5d3;
+.form-field > input:focus{
+  border-bottom: 3px solid var(--nav-bar-color);
+}
+
+.form-submit {
+  box-sizing: border-box;
+  background-color: var(--button-green-color);
+  color: var(--nav-text-color);
+  height:35px;
+  width:300px;
+  margin:10px;
+  font-weight: 600;
+	transform: perspective(1px) translateZ(0);
+  box-shadow: 0 2 1px rgba(0, 0, 0, 0);
+  border:0;
+	transition-property: box-shadow;
+  transition-duration: 0.2s;
+  outline: none;
+  border-radius: 8px;
+}
+
+.form-submit:hover{
+  background-color: var(--button-green-hover);
+  box-shadow: 0 1px 2px rgba(68, 67, 67, 0.61);
+  cursor:pointer;
+
+}
+
+.form-submit:active{
+	transform: translateY(4px);
 }
