--- a/cs-97-react/src/page-view.css
+++ b/cs-97-react/src/page-view.css
@@ -1,9 +1,12 @@
 :root {
-  --nav-bar-color: rgb(14, 51, 90);
-  --nav-text-color: rgb(255, 255, 255);
-  --nav-bar-hover: rgb(8, 35, 63);
-  --main-background-color: rgb(255, 255, 255);
-  --hover-color: rgb(102, 175, 235);
+  --nav-bar-color: #0e335a;
+  --nav-text-color: #ffffff;
+  --nav-bar-hover: #08233f;
+  --main-background-color: #ffffff;
+  --button-blue-color: #0e335a;
+  --button-blue-hover: #134377;
+  --button-green-color: #3dada2;
+  --button-green-hover: #41b9ad;
 }
   
 html, body {
